--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "subsai-app-backend",
+  "name": "subsai-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
-    "node-fetch": "^3.3.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   }
 }
